simple test pass.